Fix Project file overflowing.

--- a/client/app/projectView/projectView.styl
+++ b/client/app/projectView/projectView.styl
@@ -76,8 +76,7 @@ span#addPersonIcon, span#addFileIcon
 	-moz-padding-end: 30px
 	
 span.projectTitle
-	absolute: left 40px
-	width: 400px
+	absolute: left 40px right 35px
 	overflow-x: hidden
 	text-overflow: ellipsis
 
